--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -8,14 +8,14 @@
 
   <h3>Existing Owners</h3>
   <% @owners.each do |owner| %>
-    <input type="radio" name="owner[name]" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owner == owner %>><%= owner.name %><br>
+    <input type="radio" name="owner_id" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owner == owner %>><%= owner.name %><br>
   <% end %>
   <br>
 
   <h3>New Owner</h3>
   <label>Owner Name: </label>
   <br>
-  <input type="text" name="owner_name" id="owner_name"></input>
+  <input type="text" name="owner[name]" id="owner_name"></input>
   <br><br>
 
   <input type="submit" value="Update Pet">
