--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -4,11 +4,11 @@
   <input id="hidden" type="hidden" name="_method" value="patch">
   <label>Edit the Pet's Name:</label>
   <br>
-  <input type="text" name="pet_name" value="<%= @pet.name %>">
+  <input type="text" name="pet[name]" id="pet_name" value="<%= @pet.name %>">
 
   <h3>Existing Owners</h3>
   <% @owners.each do |owner| %>
-    <input type="radio" name="owner_id" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owner == owner %>><%= owner.name %><br>
+    <input type="radio" name="pet[owner_id]" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owner == owner %>><%= owner.name %><br>
   <% end %>
   <br>
 
