--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -5,11 +5,11 @@
 
   <br>
 
-  <input type="text" name="pet_name">
+  <input type="text" name="pet[name]" id="pet_name">
 
   <h3>Existing Owners</h3>
   <% @owners.each do |owner| %>
-    <input type="radio" name="owner_id" id="<%= owner.id %>" value="<%= owner.id %>"><%= owner.name %><br>
+    <input type="radio" name="pet[owner_id]" id="<%= owner.id %>" value="<%= owner.id %>"><%= owner.name %><br>
   <% end %>
   <br>
 
