--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,18 @@
 <h1>Create a new Pet</h1>
 
+<form method="POST" action="/pets">
+
+    <label>Pet name:<input type="text" id="pet_name" name="pet[name]"></label>
+
+    <p>Select an existing owner or create a new one below.</p>
+    <h3>Existing Owners</h3>
+    <% @owners.each do |o| %>
+        <input type="radio" name="pet[owner_id][]" id="<%= o.id %>" value="<%= o.id %>"><%= o.name %><br>
+    <% end %>
+
+    <h3>Create a new owner</h3>
+    <label>Owner name: <input type="text" id="owner_name" name="owner[name]"></label>
+    
+    <br>
+    <input type="submit" value="Create Pet">
+</form>
